fixed button alignment bug for netlight

--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,7 @@ h2 {
   margin-left: 10%;
   margin-bottom: 10%;
   color: #2C3F6B;
+  text-align: left;
 }
 
 .section {
